update publications & upload CV

--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Hsiu-Yu Yang"
   avatar           : "profile.png"
-  bio              : "Doctoral Researcher"
+  bio              : "Doctoral Researcher | Language-and-Vision | Commonsense Knowledge and Reasoning"
   location         : "Stuttgart, Germany"
   employer         : "University of Stuttgart "
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
