--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Hsiu-Yu Yang"
-  avatar           : "profile.png"
+  avatar           : "profile_me.jpg"
   bio              : "Doctoral Researcher | Language-and-Vision | Commonsense Knowledge and Reasoning"
   location         : "Stuttgart, Germany"
   employer         : "University of Stuttgart "
